fortune-pod-env-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-env-from-configmap
spec:
  containers:
  - image: mattogodoy/fortune-env:arm
    name: html-generator
    volumeMounts:
    - name: html
      mountPath: /var/htdocs
  - image: arm32v7/nginx:alpine
    name: web-server
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:
  - name: html
    # emptyDir: {}  # Creates the volume in the worker node's disk.
    emptyDir:
      medium: Memory  # Creates a tmpfs volume and stores contents there
