ghost-blog.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-blog
  labels:
    app: ghost-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-blog
  template:
    metadata:
      labels:
        app: ghost-blog
    spec:
      containers:
      - name: ghost-blog
        image: ghost:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: content
      volumes:
       - name: content
         persistentVolumeClaim:
           claimName: ghost-pv-claim
