kubia-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kubia-daemonset
spec:
  selector:
    matchLabels:
      app: ssd-monitor
  template:
    metadata:
      labels:
        app: ssd-monitor
    spec:
      nodeSelector:
        disk: ssd
      containers:
      - name: kubia
        image: luksa/ssd-monitor
