mongo-pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  containers:
  - image: andresvidal/rpi3-mongodb3
    name: mongodb
    volumeMounts:
    - name: mongodb-data  # Same name as the defined volume in line 16
      mountPath: /data/db
    ports:
    - containerPort: 27017
      protocol: TCP
  volumes:
  - name: mongodb-data
    persistentVolumeClaim:
      claimName: mongodb-pvc
