kubia-external-svc-endpoints.yaml
# The Endpoints resource has to have the same name as the service (in this case, `kubia-external-svc`)

apiVersion: v1
kind: Endpoints
metadata:
  name: kubia-external-svc
subsets:
  - addresses:
    - ip: 11.11.11.11
    - ip: 22.22.22.22
    ports:
    - port: 80
