kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia-ingress
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-svc-nodeport
          servicePort: 80
  #     - path: /kubia
  #       backend:
  #         serviceName: kubia
  #         servicePort: 80
  #     - path: /bar
  #       backend:
  #         serviceName: bar
  #         servicePort: 80
  # - host: foo.example.com
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: foo
  #         servicePort: 80
